src/test/resources/type/bad/do-1.fika
double d = 4

do d {
    print("Hello")
}